# ecommerce-product-scraper

./: .gitignore  PORTFOLIO.md  README.md  pyproject.toml  requirements.txt
data/: sample_products.csv  sample_products.json
src/ecommerce_scraper/: __init__.py  cli.py  exporter.py  parser.py  scraper.py
tests/: test_parser.py
tests/fixtures/: books_page.html
