[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-product-scraper"
version = "1.0.0"
description = "A portfolio-ready Python scraper that exports e-commerce product data to CSV or JSON."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ecommerce-scraper = "ecommerce_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
